Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,8 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    nu = travel_destinations"
+    "    nu = travel_destinations[0]\n",
+    "    return nu"
    ]
   },
   {
