--- a/index.ipynb
+++ b/index.ipynb
@@ -91,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    nu = travel_destinations[0]\n",
+    "    nu = travel_destinations[0].title()\n",
     "    return nu"
    ]
   },
