--- a/index.ipynb
+++ b/index.ipynb
@@ -157,8 +157,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    print('Madagascar')\n",
-    "    "
+    "    fd = print('Madagascar')\n",
+    "    return"
    ]
   },
   {
