Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    fd = print('Madagascar')\n",
+    "    fd = print('Madagascar'),\n",
+    "    \n",
     "    \n",
     "    return fd"
    ]
