--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    fd = print('Madagascar'),\n",
-    "    \n",
+    "    travel_destinations.append('')\n",
     "    \n",
     "    return fd"
    ]
