--- a/index.ipynb
+++ b/index.ipynb
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    fd = print('Madagascar'),\n",
-    "    travel_destinations.append('')\n",
+    "    travel_destinations.append('Madagascar')\n",
     "    \n",
     "    return fd"
    ]
