--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -174,6 +174,16 @@
      "text": [
       "Madagascar\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None,)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
