Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,8 +157,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    fd = print('Madagascar'),\n",
-    "    travel_destinations.append('Madagascar')\n",
+    "    fd = print('Madagascar'), travel_destinations.append('Madagascar')\n",
     "    \n",
     "    return fd"
    ]
