--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    "
+    "    country_titles = travel"
    ]
   },
   {
