--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    country_tites"
+    "    country_titles = []\n",
+    "    for country in "
    ]
   },
   {
