Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    country_titles = []\n",
-    "    for country in "
+    "    for country in travel_destinations:\n",
+    "        travel"
    ]
   },
   {
