Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,8 @@
     "def capitalize_countries():\n",
     "    country_titles = []\n",
     "    for country in travel_destinations:\n",
-    "        travel"
+    "        travel_destinations.title()\n",
+    "    "
    ]
   },
   {
