--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,7 @@
     "    country_titles = []\n",
     "    for country in travel_destinations:\n",
     "        travel_destinations.title()\n",
-    "    "
+    "    return country_title"
    ]
   },
   {
