Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    country_titles = []\n",
+    "    country_titles = \n",
     "    for country in travel_destinations:\n",
     "        country.title()\n",
     "    return country_titles"
