--- a/index.ipynb
+++ b/index.ipynb
@@ -234,13 +234,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    country_titles = \n",
+    "    country_titles = []\n",
     "    for country in travel_destinations:\n",
     "        country.title()\n",
     "    return country_titles"
