--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
     "def capitalize_countries():\n",
     "    country_titles = []\n",
     "    for country in travel_destinations:\n",
-    "        country_titles.title()\n",
+    "        country_titles.append()\n",
     "    return country_titles"
    ]
   },
