Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,22 +242,22 @@
     "def capitalize_countries():\n",
     "    country_titles = []\n",
     "    for country in travel_destinations:\n",
-    "        country_titles.append(country)\n",
+    "        country_titles.append(country.title())\n",
     "    return country_titles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
